# rust_axum_api

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20241112151005_table_products.down.sql  20241112151005_table_products.up.sql  20241112151247_table_category.down.sql  20241112151247_table_category.up.sql  20241117111000_users.down.sql  20241117111000_users.up.sql
src/: main.rs
src/api/: mod.rs
src/api/auth/handlers/: login_user.rs  register_user.rs
src/api/auth/models/: mod.rs
src/api/category/handlers/: create_category.rs  delete_category.rs  get_categories.rs  get_category_by_id.rs  mod.rs  update_category.rs
src/api/category/models/: category_model.rs  category_model_request.rs  mod.rs
src/api/category/repository/: mod.rs
src/api/category/service/: mod.rs
src/api/products/handlers/: create_product.rs  delete_product.rs  get_product_by_id.rs  get_products.rs  mod.rs  update_product.rs
src/api/products/models/: mod.rs  product_model.rs  product_request_model.rs
src/api/products/repository/: mod.rs
src/api/products/service/: mod.rs
src/api/users/handlers/: create_user.rs
src/api/users/models/: user_model.rs
src/config/: mod.rs
src/config/db/: mod.rs
src/config/envi/: mod.rs
src/config/rabbitmq/: mod.rs
src/middleware/: mod.rs
src/routes/: auth_routes.rs  category_routes.rs  mod.rs  product_routes.rs  user_routes.rs
src/shared/: mod.rs
src/shared/api_response/: mod.rs
src/shared/error/: mod.rs
src/state/: mod.rs
src/task/event/: mod.rs
src/task/message/: mod.rs
src/utils/: jwt.rs
(+2 files in other folders)
